--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         }
     ],
     "require": {
-        "illuminate/support": "~5.1",
+        "illuminate/support": "~5.1|~6.0",
         "php" : "~5.6|~7.0"
     },
     "require-dev": {
